Fix T49640: Cycles constant folding incorrect for texture coordinates.